# MailingSheet

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  backup.py  cmake_install.cmake  compile_commands.json  hsv.py  hsv2.py  msd_v1.0.cpp  msd_v1.1.cpp  rgb.py  tes.py  test.py  test2.py  test3.py
.cache/clangd/index/: msd_v1.1.cpp.CBCF915DC6F677A4.idx
